there is some white space at the top of the h1 & h2, because I set them to have 10px margin at the top & bottom, so to render the navbar to go right to the top of the viewport I added overflow: auto to the .container, which fixes this problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,9 @@ img {
     color: #fff;
     height: 70px;
 }
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    overflow: auto;
+}
